apps/staging/changes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: changes-http
  namespace: changes-stage
spec:
  hostnames:
    - changes.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: changes-https
  namespace: changes-stage
spec:
  hostnames:
    - changes.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: changes
          port: 8080
